--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,108 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=Kaushan+Script&display=swap');
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.mydiv{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+ justify-content: space-between;
+  margin:10px 0%;
+  box-shadow: 2px 2px 5px  rgb(206, 206, 206);
+  padding: 15px;
+  background: linear-gradient(to right, #ffffff 30%, #ffffff 100%) ;
+}
+.head{
+  font-size: 1.2rem;
+  font-family: 'Kaushan Script', cursive;
+  /* border-bottom: 1px solid #e6e6e6; */
+  border-radius: 15px 50px ;
+  background-color: #f5f5f5;
+  padding: 8px;
+  width: 10%;
+
+}
+.tail{
+  font-size: .9rem;
+  font-family: 'Kaushan Script', cursive;
+  margin-right: 5px;
+
+}
+text{
+  color:#8b32ff; 
+  /* border-bottom: 1px solid rgb(240, 240, 240); */
+  /* padding-bottom: 5px; */
+}
+.find{
+  padding: 6px;
+  width:70px;
+  margin-left: 10px;
+  background-color: #8b32ff;
+  border: none;
   color: white;
+  font-family: 'Kaushan Script', cursive;
+  font-size:1.1rem ;
+  box-shadow: 2px 2px 5px grey;
+
+}
+h1{
+  font-family: 'Kaushan Script', cursive;
+
+
+}
+input:focus,.find:focus{
+  outline: none;
+}
+.find:hover{
+  background-color: white;
+  color: #8b32ff;
+  box-shadow: 2px 2px 5px grey;
+  transition: 1s;
+}
+.inputsearch{
+  display: flex;
+  align-items: center;
+}
+.searchInput{
+  padding: 7px;
+  border: 1px solid rgb(206, 206, 206);
+  
+}
+.gallery{
+  display: flex;
+
+  flex-wrap: wrap;
+  justify-content: space-around;
+  
 }
 
-.App-link {
-  color: #61dafb;
+.item{
+  width:30%;
+  margin:15px 5px;
+  border-radius: 10px;
+  box-shadow: 3px 3px 5px rgb(163, 163, 163);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+
+
+@media only screen and (max-width: 425px){
+
+  .mydiv{
+    display: flex;
+    margin:5px 0;
+    padding: 10px;
+    width: 100%;
+    align-items: center;
+    justify-content: space-around;
   }
-  to {
-    transform: rotate(360deg);
+  .head{
+    font-size: 1rem;
+  }
+  .searchInput{
+  width: 150px;
+  }
+
+  .find{
+    margin-left: 3px;
+    font-size: 1rem;
   }
 }
